--- a/style/main.css
+++ b/style/main.css
@@ -13,15 +13,17 @@ header{
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
     margin-top: 20px;
+    color: white;
 
     
 }
 
 header h1 {
-    font-size:75px;
+    font-size:85px;
     padding-left:5%;
     text-shadow: 5px 5px 10px black;
     font-family: 'Amatic SC';
+    font-weight: bold;
 }
 
 main h2{
