--- a/styles/main.css
+++ b/styles/main.css
@@ -9,12 +9,12 @@ header{
     display: flex;
     justify-content: center;
     border-radius: 30px;
-    height: 225px;
+    
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
     margin-top: 20px;
     
- 
+
    
 
     
@@ -38,6 +38,8 @@ main h2{
 
 header img{
     border-radius: 20px;
+    width: 180px;
+    height: auto;
     
 }
 
@@ -48,17 +50,13 @@ header img{
 
 footer {
     text-align: center;
-    height: 70px;
+    padding: 1rem;
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
     font-size: larger;
     border-radius: 30px;
-    flex-wrap: flex;
     
 }
 
-#timeupdated{
-    color:black;
-}
 
 
