--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -7,14 +7,18 @@
     padding-right: 10px;
     font-family: 'Roboto'
     
+    
 
 }
 
 header{
-    border-radius: 30px;
+    border-radius: 15px;
     text-align: center;
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    margin-top: 10px;
 }
 
 
@@ -32,7 +36,7 @@ main{
 
 main section{
     border:2px solid tan;
-    margin-top: 10px;
+    margin-top: 20px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
 }
@@ -55,6 +59,9 @@ main section h2{
 
 main section p{
     text-align: center;
+    font-family: 'Roboto';
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 main section img{
@@ -75,12 +82,14 @@ main section a{
 
 
 footer{
-    border-radius: 30px;
+    border-radius: 15px;
     text-align: center;
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
     padding: 15px;
     font-family: 'Roboto';
     font-size:18px;
+   margin-bottom: 15px;
+
     
 }
