--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
-    font-family: 'Roboto'
+    font-family: 'Roboto';
     
     
 
@@ -69,7 +69,7 @@ main section img{
     margin: auto;
     height:auto;
     width:100%;
-    border:1px solid black;
+    
 }
     
 main section a{
