--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,8 +1,10 @@
 @media only screen and (min-width: 32.5em) {
 
     .container {
-        max-width: 1200px;
-       
+        max-width: 1000px;
+        margin-left: 35px ;
+      
+    
     }
 
     main{
@@ -13,6 +15,21 @@
     main section:nth-child(3) {
         grid-column: span 3;
         
+    }
+    header{
+        margin-right: 35px;
+
+    }
+    footer{
+        margin-right: 20px
+    }
+
+    
+    #three{
+       
+   max-width: 95%;
+       
+      
     }
     
     
