--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -6,19 +6,21 @@
     padding-left: 10px;
     padding-right: 10px;
     font-family: 'Roboto';
-    
+    align-content: center;
+    justify-content: center;
     
 
 }
 
 header{
+   
     border-radius: 15px;
     text-align: center;
     background-color: #1EA9F1;
     box-shadow: 5px 5px 10px black;
     padding-top: 1px;
     padding-bottom: 1px;
-    margin-top: 10px;
+    margin-top: 10px
 }
 
 
@@ -28,9 +30,9 @@ main{
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     column-gap: 5%;
-    margin-left: 20px;
-    margin-right: 20px;
+    
     padding-bottom: 10px;
+    
     
 }
 
@@ -39,6 +41,7 @@ main section{
     margin-top: 20px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+   
 }
 
 main section h1{
