--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -1,29 +1,38 @@
 @media only screen and (min-width: 62em) {
 
     .container {
-        max-width: 1400px;
-        margin-left: 60px ;
-        margin-right:60px;
+        max-width: 1600;
+        margin:0 auto ;
+        padding-left: 5%;
+        padding-right: 4%;
+
+        
+     
+        
     }
 
     main{
         grid-template-columns: 1fr 1fr 1fr;
+        margin:0 auto ;
+
     }
 
     main section:nth-child(3) {
         grid-column: span 1;
+        
     }
 
-    header {
+    header{
         padding-top: 1px;
         padding-bottom: 1px;
         margin-top: 10px;
-        margin-right: 20px;
+        margin-right: 15px;
 
         
     }
 
     footer{
+        margin-right: 10px;
         margin-bottom: 10px;
     }
 }
