--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,8 +1,9 @@
 @media only screen and (min-width: 32.5em) {
 
     .container {
-        max-width: 1000px;
-        margin-left: 35px ;
+        max-width: 1200px;
+        padding-left: 8%;
+        
       
     
     }
@@ -17,11 +18,13 @@
         
     }
     header{
+        
+        margin-top: 10px;
         margin-right: 35px;
 
     }
     footer{
-        margin-right: 20px
+        margin-right: 25px;
     }
 
     
