--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 62em) {
 
     .container {
-        max-width: 1600;
+        max-width: 1600px;
         margin:0 auto ;
         padding-left: 5%;
         padding-right: 4%;
