--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -2,18 +2,14 @@
 
     .container {
         max-width: 1600px;
-        margin:0 auto ;
+       
         padding-left: 5%;
         padding-right: 4%;
-
-        
-     
         
     }
 
     main{
         grid-template-columns: 1fr 1fr 1fr;
-        margin:0 auto ;
 
     }
 
@@ -26,7 +22,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         margin-top: 10px;
-        margin-right: 1px;
+        margin-right: 2%;
 
         
     }
