--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -20,16 +20,16 @@
     header{
         
         margin-top: 10px;
-        margin-right: 35px;
+        margin-right: 45px;
 
     }
     footer{
-        margin-right: 1px;
+        margin-right: 25px;
         
     }
 
     
-    #three{
+    #box3{
        
    max-width: 95%;
        
