--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -25,14 +25,13 @@ header{
 
 nav {
 	text-align: center;
-
     display: flex;
 	flex-direction: column;
 }
 
 nav a {
 	display: block;
-	color: #040028;
+	color: black;
 	text-align: center;
 	padding: 15px;
 	text-decoration: dotted;
@@ -82,7 +81,7 @@ header,nav,main {
 
 
 nav a:hover {
-	background-color: #040028;
+	background-color: tan;
 	color: white;
 }
 
@@ -95,7 +94,7 @@ footer {
     text-align: center;
     padding: 1rem;
     background-color: #1EA9F1;
-    box-shadow: 5px 5px 10px black;
+  
     font-size: larger;
     border-radius: 30px;
 }
