--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -90,6 +90,13 @@ img{
     height: 200px;
 }
 
+#targetaud{
+    
+    width: 65%;
+
+    
+}
+
 footer {
     text-align: center;
     padding: 1rem;
